--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html >
+<html lang="ja">
+<head>
+<meta charset="utf=8" />A
+  <link re="stylesheet" type="text/css" href="css/default.css">
+<title>おいしいカレーの作り方</title>
+</head>
+  <body>
+    <table>
+      <tr><th>ジャガイモ</th><td>3個</td></tr>
+      <tr><th>ニンジン</th><td>1本</td></tr>
+      <tr><th>豚ブロック</th><td>300g</td></tr>
+      <tr><th>カレー粉</th><td>1箱</td></tr>
+    </table>
+  </body>
+</html>
