--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>おいしいカレーの作り方</title>
 </head>
   <body>
-    <table>
+    <table id="ingredient">
       <tr><th>ジャガイモ</th><td>3個</td></tr>
       <tr><th>ニンジン</th><td>1本</td></tr>
       <tr><th>豚ブロック</th><td>300g</td></tr>
