--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>おいしいカレーの作り方</title>
 </head>
   <body>
+    <article id="main">
+      <p>コンビニに行きます。</p>
+    </article>
     <table id="ingredient">
       <tr><th>ジャガイモ</th><td>3個</td></tr>
       <tr><th>ニンジン</th><td>1本</td></tr>
