--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <article id="main">
       <p>コンビニに行きます。</p>
+      <img src="unnamed.jpg" art="マウス" width=300>
+      <dl>
+        <dt>色：</dt><dd>黒</dd>
+        <dt>使いやすさ：</dt><dd>普通</dd>
+      </dl>
     </article>
   </body>
 </html>
