--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <article id="main">
       <p>コンビニに行きます。</p>
       <img src="unnamed.jpg" art="マウス" width=300 class="photo">
-      <dl>
+      <dl class="explanation">
         <dt>色：</dt><dd>黒</dd>
         <dt>使いやすさ：</dt><dd>普通</dd>
       </dl>
