--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <article id="main">
       <p>コンビニに行きます。</p>
+      <section class="m_picture">
       <img src="unnamed.jpg" art="マウス" width=300 class="photo">
       <dl class="explanation">
         <dt>色：</dt><dd>黒</dd>
         <dt>使いやすさ：</dt><dd>普通</dd>
       </dl>
+      </section>
     </article>
   </body>
 </html>
