--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       </dl>
       </section>
     </article>
+    <input type="submit" value="ok">
+    <input type="reset" value="リセット">
   </body>
 </html>
