--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </dl>
       </section>
     </article>
-    <input type="submit" value="ok" class="btn">
-    <input type="reset" value="リセット" class="btn">
+    <input type="submit" value="ok" class="btn btn-submit">
+    <input type="reset" value="リセット" class="btn btn-reset">
   </body>
 </html>
