--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       </dl>
       </section>
     </article>
+    <table>
+      <tr><th>ジャガイモ</th><td>3個</td></tr>
+      <tr><th>ニンジン</th><td>1本</td></tr>
+      <tr><th>豚ブロック</th><td>300g</td></tr>
+      <tr><th>カレー粉</th><td>1箱</td></tr>
+    </table>
     <input type="submit" value="ok" class="btn btn-submit">
     <input type="reset" value="リセット" class="btn btn-reset">
   </body>
