--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </dl>
       </section>
     </article>
-    <table>
+    <table id="ingredient">
       <tr><th>ジャガイモ</th><td>3個</td></tr>
       <tr><th>ニンジン</th><td>1本</td></tr>
       <tr><th>豚ブロック</th><td>300g</td></tr>
