--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
       </section>
     </article>
     <table id="ingredient">
-      <tr><th>ジャガイモ</th><td>3個</td></tr>
-      <tr><th>ニンジン</th><td>1本</td></tr>
-      <tr><th>豚ブロック</th><td>300g</td></tr>
-      <tr><th>カレー粉</th><td>1箱</td></tr>
+      <caption>カレーの材料</caption>
+      <colgroup id="name">
+        <colgroup id="amount">
+          <colgroup id="price">
+            <thead>
+              <tr><th></th><td>分量</td><td>値段</td></tr>
+            </thead>
+            <tbody>
+              <tr><th>ジャガイモ</th><td>3個</td><td rowspan="2">200円</td></tr>
+              <tr><th>ニンジン</th><td>1本</td></tr>
+              <tr><th>豚ブロック</th><td>300g</td><td>400円</td></tr>
+              <tr><th>カレー粉</th><td>1箱</td><td>300円</td></tr>
+            </tbody>
+            <tfoot>
+              <tr><th>合計</th><td colspan="2">1000円</td></tr>
+            </tfoot>
     </table>
     <input type="submit" value="ok" class="btn btn-submit">
     <input type="reset" value="リセット" class="btn btn-reset">
