--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="ja">
 <head>
-<meta charset="utf=8" />
+<meta charset="utf=8">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 <title>おいしいカレーの作り方</title>
 </head>
