--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="ja">
 <head>
-<meta charset="utf=8">
+<meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 <title>おいしいカレーの作り方</title>
 </head>
@@ -9,7 +9,7 @@
     <article id="main">
       <p>コンビニに行きます。</p>
       <section class="m_picture">
-      <img src="unnamed.jpg" art="マウス" width=300 class="photo">
+      <img src="unnamed.jpg" alt="マウス" width=300 class="photo">
       <dl class="explanation">
         <dt>色：</dt><dd>黒</dd>
         <dt>使いやすさ：</dt><dd>普通</dd>
